Add langid-s to bib file

--- a/thesis.bib
+++ b/thesis.bib
@@ -10,7 +10,8 @@
   year = {2009},
   pages = {90--101},
   publisher = {ACM},
-  url = {http://dx.doi.org/10.1145/1480881.1480894}
+  url = {http://dx.doi.org/10.1145/1480881.1480894},
+  langid = {english}
 }
 
 @MISC{GameB_1,
@@ -18,14 +19,16 @@
   title = {Code-Based Game-Playing Proofs and the Security of Triple Encryption},
   howpublished = {Cryptology ePrint Archive, Report 2004/331},
   year = {2004},
-  note = {\url{http://eprint.iacr.org/}}
+  note = {\url{http://eprint.iacr.org/}},
+  langid = {english}
 }
 
 @MISC{proVerif,
   author = {Bruno Blanchet},
   title = {{Proverif: Cryptographic protocol verifier in the formal model}},
   howpublished = {\url{http://www.proverif.ens.fr/}},
-  timestamp = {2012.05.15}
+  timestamp = {2012.05.15},
+  langid = {english}
 }
 
 @MISC{kamm12,
@@ -36,7 +39,8 @@
   year = {2012},
   file = {:/Users/tiina/Desktop/Thesis/Documents/papers/2012-05-tiina-bachelors-thesis/References/kamm-slides.pdf:PDF},
   timestamp = {2012.04.27},
-  url = {http://www.cs.ut.ee/~varmo/tday-kubija/kamm-slides.pdf}
+  url = {http://www.cs.ut.ee/~varmo/tday-kubija/kamm-slides.pdf},
+  langid = {english}
 }
 
 
@@ -45,7 +49,8 @@
   title = {Sequences of games: a tool for taming complexity in security proofs},
   howpublished = {Cryptology ePrint Archive, Report 2004/332},
   year = {2004},
-  note = {\url{http://eprint.iacr.org/}}
+  note = {\url{http://eprint.iacr.org/}},
+  langid = {english}
 }
 
 
@@ -56,7 +61,8 @@
   title = {Programmeerimiskeeled},
   location = {Tartu},
   publisher = {Tartu Ülikooli Kirjastus},
-  year = {2007}
+  year = {2007},
+  langid = {estonian}
 }
 
 @thesis{ex6,
@@ -66,7 +72,8 @@
   type = {bathesis},
   year = {2015},
   url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781&year=2015},
-  urldate = {2024-10-13}
+  urldate = {2024-10-13},
+  langid = {estonian}
 }
 
 @incollection{ex7,
@@ -86,7 +93,8 @@
   journal = {Keel ja Kirjandus},
   number = {10},
   year = {2010},
-  pages = {726-738}
+  pages = {726-738},
+  langid = {estonian}
 }
 
 @incollection{ex9,
@@ -96,38 +104,44 @@
   number = {7},
   year = {2003},
   url = {http://www.tlu.ee/i-foorum/ifoorum7/Artiklid/sirje.htm},
-  urldate = {2005-06-20}
+  urldate = {2005-06-20},
+  langid = {estonian}
 }
 
 @online{ex10,
   label = {Wat},
   title = {IBM Watson},
   url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson/},
-  urldate = {2016-08-26}
+  urldate = {2016-08-26},
+  langid = {english}
 }
 
 @reference{ex11,
   label = {CePA},
   title = {Elektrooniline krüptograafiliste publikatsioonide arhiiv Eprint},
-  url = {http://eprint.iacr.org/}
+  url = {http://eprint.iacr.org/},
+  langid = {english}
 }
 
 @reference{ex12,
   editor = {Heikki Vallaste},
   title = {e-Teatmik: IT ja sidetehnika seletav sõnaraamat},
-  url = {http://www.vallaste.ee/}
+  url = {http://www.vallaste.ee/},
+  langid = {estonian}
 }
 
 @online{chatgpt,
   author = {{OpenAI}},
   title = {ChatGPT (version)},
   year = {2022},
-  url = {https://chat.openai.com/}
+  url = {https://chat.openai.com/},
+  langid = {english}
 }
 
 @online{copilot,
   author = {{Microsoft}},
   title = {Microsoft Copilot (version)},
   year = {2024},
-  url = {https://copilot.microsoft.com/}
+  url = {https://copilot.microsoft.com/},
+  langid = {english}
 }
