Clean up crypto example bib entries

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,55 +1,51 @@
-% This file was created with JabRef 2.7.2.
-% Encoding: MacRoman
-
-
-@INPROCEEDINGS{certiCrypt,
-  author = {Gilles Barthe and Benjamin Gr{\'e}goire and Santiago {Zanella B{\'e}guelin}},
-  title = {Formal Certification of Code-Based Cryptographic Proofs},
-  booktitle = {36th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages,
-	POPL 2009},
+@inproceedings{certiCrypt,
+  author = {Barthe, Gilles and Gr\'{e}goire, Benjamin and Zanella B\'{e}guelin, Santiago},
+  title = {Formal certification of code-based cryptographic proofs},
+  booktitle = {Proceedings of the 36th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  series = {POPL '09},
+  location = {New York, NY, USA},
+  publisher = {Association for Computing Machinery},
   year = {2009},
-  pages = {90--101},
-  publisher = {ACM},
-  url = {http://dx.doi.org/10.1145/1480881.1480894},
+  pages = {90–101},
+  url = {https://doi.org/10.1145/1480881.1480894},
+  doi = {10.1145/1480881.1480894},
   langid = {english}
 }
 
-@MISC{GameB_1,
+@misc{GameB_1,
   author = {Mihir Bellare and Phillip Rogaway},
   title = {Code-Based Game-Playing Proofs and the Security of Triple Encryption},
-  howpublished = {Cryptology ePrint Archive, Report 2004/331},
+  howpublished = {Cryptology {ePrint} Archive, Paper 2004/331},
   year = {2004},
-  note = {\url{http://eprint.iacr.org/}},
+  url = {https://eprint.iacr.org/2004/331},
   langid = {english}
 }
 
-@MISC{proVerif,
+@online{proVerif,
   author = {Bruno Blanchet},
-  title = {{Proverif: Cryptographic protocol verifier in the formal model}},
-  howpublished = {\url{http://www.proverif.ens.fr/}},
-  timestamp = {2012.05.15},
+  title = {Proverif: Cryptographic protocol verifier in the formal model},
+  url = {http://www.proverif.ens.fr/}, % Dead URL
+  urldate = {2012-05-15},
   langid = {english}
 }
 
-@MISC{kamm12,
+@misc{kamm12,
   author = {Liina Kamm},
-  title = {{ProveIt -- How to make proving cryptographic protocols less tedious}},
+  title = {ProveIt -- How to make proving cryptographic protocols less tedious},
   howpublished = {Talk at the 21st Estonian Computer Science Theory Days at Kubija},
-  month = {1},
   year = {2012},
-  file = {:/Users/tiina/Desktop/Thesis/Documents/papers/2012-05-tiina-bachelors-thesis/References/kamm-slides.pdf:PDF},
-  timestamp = {2012.04.27},
-  url = {http://www.cs.ut.ee/~varmo/tday-kubija/kamm-slides.pdf},
+  month = {1},
+  url = {https://kodu.ut.ee/~varmo/tday-kubija/kamm-slides.pdf},
+  urldate = {2012-04-27},
   langid = {english}
 }
 
-
-@MISC{GameB_2,
+@misc{GameB_2,
   author = {Victor Shoup},
   title = {Sequences of games: a tool for taming complexity in security proofs},
-  howpublished = {Cryptology ePrint Archive, Report 2004/332},
+  howpublished = {Cryptology {ePrint} Archive, Paper 2004/332},
   year = {2004},
-  note = {\url{http://eprint.iacr.org/}},
+  url = {https://eprint.iacr.org/2004/332},
   langid = {english}
 }
 
