--- a/sections/references-citations.tex
+++ b/sections/references-citations.tex
@@ -23,7 +23,7 @@ There should be a \emph{non-breaking space} \verb|~| between the name of the obj
 To be able to cite sources (like articles, books, websites) you must add them to the \verb|thesis.bib| file in BibTeX format.
 In addition to defining fields like \verb|author| and \verb|title|, each entry also has a unique \emph{key}.
 Most publishers (like Springer, ACM) and databases (like DBLP, Google Scholar) offer export for BibTeX entries that can be copied into the bibliography file.
-You can manage the bibliography file directly or use a frontend like JabRef\footnote{\url{http://jabref.sourceforge.net/}}.
+You can manage the bibliography file directly or use a frontend like JabRef\footnote{\url{https://jabref.sourceforge.net/}}.
 
 To cite a source, use \verb|\cite{some-key}| or \verb|\cite[page]{some-key}|, also prefixed with a non-breaking space \verb|~|.
 For example, see the following sentences.
