--- a/thesis.bib
+++ b/thesis.bib
@@ -99,7 +99,7 @@
   booktitle = {Infofoorum},
   number = {7},
   year = {2003},
-  url = {http://www.tlu.ee/i-foorum/ifoorum7/Artiklid/sirje.htm},
+  url = {https://www.tlu.ee/i-foorum/ifoorum7/Artiklid/sirje.htm},
   urldate = {2005-06-20},
   langid = {estonian}
 }
@@ -107,7 +107,7 @@
 @online{ex10,
   label = {Wat},
   title = {IBM Watson},
-  url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson/},
+  url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson/}, % Dead URL
   urldate = {2016-08-26},
   langid = {english}
 }
@@ -115,14 +115,14 @@
 @reference{ex11,
   label = {CePA},
   title = {Elektrooniline krüptograafiliste publikatsioonide arhiiv Eprint},
-  url = {http://eprint.iacr.org/},
+  url = {https://eprint.iacr.org/},
   langid = {english}
 }
 
 @reference{ex12,
   editor = {Heikki Vallaste},
   title = {e-Teatmik: IT ja sidetehnika seletav sõnaraamat},
-  url = {http://www.vallaste.ee/},
+  url = {https://www.vallaste.ee/},
   langid = {estonian}
 }
 
