--- a/sections/info.tex
+++ b/sections/info.tex
@@ -30,7 +30,7 @@ From a theoretical viewpoint, the result is only a small advancement in a rigoro
 
 \keywords{Type inference, fourth-order logic, \textsc{Whitespace} language \todo{Add your own keywords, separated by commas.}}
 
-% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26?. Common choices below.
+% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26. Common choices below.
 \cercs{P170 Computer science, numerical analysis, systems, control \todo{Choose CERCS.}}
 % \cercs{P175 Informatics, systems theory}
 \end{info}
@@ -45,7 +45,7 @@ From a theoretical viewpoint, the result is only a small advancement in a rigoro
 
 \keywords{\todo{Add keywords in other language, separated by commas.}}
 
-% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26?. Common choices below.
+% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26. Common choices below.
 \cercs{P170 Arvutiteadus, arvutusmeetodid, süsteemid, juhtimine (automaatjuhtimisteooria) \todo{Choose CERCS.}}
 % \cercs{P175 Informaatika, süsteemiteooria}
 \end{otherinfo}
