--- a/thesis.bib
+++ b/thesis.bib
@@ -24,7 +24,7 @@
 @online{proVerif,
   author = {Bruno Blanchet},
   title = {Proverif: Cryptographic protocol verifier in the formal model},
-  url = {http://www.proverif.ens.fr/}, % Dead URL
+  url = {http://www.proverif.ens.fr}, % Dead URL
   urldate = {2012-05-15},
   langid = {english}
 }
@@ -67,7 +67,7 @@
   institution = {TÜ arvutiteaduse instituut},
   type = {bathesis},
   year = {2015},
-  url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781&year=2015},
+  url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781},
   urldate = {2024-10-13},
   langid = {estonian}
 }
@@ -107,7 +107,7 @@
 @online{ex10,
   label = {Wat},
   title = {IBM Watson},
-  url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson/}, % Dead URL
+  url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson}, % Dead URL
   urldate = {2016-08-26},
   langid = {english}
 }
@@ -115,14 +115,14 @@
 @reference{ex11,
   label = {CePA},
   title = {Elektrooniline krüptograafiliste publikatsioonide arhiiv Eprint},
-  url = {https://eprint.iacr.org/},
+  url = {https://eprint.iacr.org},
   langid = {english}
 }
 
 @reference{ex12,
   editor = {Heikki Vallaste},
   title = {e-Teatmik: IT ja sidetehnika seletav sõnaraamat},
-  url = {https://www.vallaste.ee/},
+  url = {https://www.vallaste.ee},
   langid = {estonian}
 }
 
@@ -130,7 +130,7 @@
   author = {{OpenAI}},
   title = {ChatGPT (version)},
   year = {2022},
-  url = {https://chat.openai.com/},
+  url = {https://chat.openai.com},
   langid = {english}
 }
 
@@ -138,6 +138,6 @@
   author = {{Microsoft}},
   title = {Microsoft Copilot (version)},
   year = {2024},
-  url = {https://copilot.microsoft.com/},
+  url = {https://copilot.microsoft.com},
   langid = {english}
 }
