--- a/sections/references-citations.tex
+++ b/sections/references-citations.tex
@@ -4,7 +4,7 @@
 \subsection{Using References}
 LaTeX automatically numbers all kinds of objects, for example:
 \begin{itemize}
-    \item sections, subsections, subsubsections;
+    \item sections, subsections, subsubsections, appendices;
     \item figures, tables, subfigures, subtables;
     \item equations.
 \end{itemize}
@@ -12,7 +12,7 @@ To be able to reference them, you must add a \emph{label} using \verb|\label{som
 Usually, labels for different kinds of objects use corresponding prefixes, for example, \verb|sec:| for sections, \verb|fig:| for figures, \verb|tab:| for tables, \verb|eq:| for equations.
 
 To reference an object by its label, use \verb|\ref{some-label}|.
-For example, Section~\ref{sec:refs-cites}, Section~\ref{sec:cites}, Figure~\ref{fig:fnCompModel}, Table~\ref{tab:statements}, Figure~\ref{fig:graph}.
+For example, Section~\ref{sec:refs-cites}, Section~\ref{sec:cites}, Appendix~\ref{app:glossary}, Figure~\ref{fig:fnCompModel}, Table~\ref{tab:statements}, Figure~\ref{fig:graph}.
 To reference equations, use \verb|\eqref{some-label}| instead, for example Equation~\eqref{eq:abcd}.
 There should be a \emph{non-breaking space} \verb|~| between the name of the object and the reference command so that they would not appear on different lines.
 
