Make supervisors \large in \maketitle
Previously the obsolete times package used Helvetica which was larger than necessary. This somewhat accounts for the look.
Everything in \maketitle is at least \large.

--- a/unitartucs-thesis.cls
+++ b/unitartucs-thesis.cls
@@ -119,6 +119,7 @@
 
     \begin{flushright}
     {
+    \large
     \setlength{\extrarowheight}{5pt}
     \renewcommand*{\and}{\\ & \sffamily}
     \newcommand*{\degree}[1]{, ##1}
