Add unitartucs-authoryear biblatex style

--- a/sections/references-citations.tex
+++ b/sections/references-citations.tex
@@ -29,6 +29,7 @@ To cite a source, use \verb|\cite{some-key}| or \verb|\cite[page]{some-key}|, al
 For example, see the following sentences.
 Game-based proving is a way to analyse the security of a cryptographic protocol~\cite{GameB_1,GameB_2}.
 There are automatic provers, such as CertiCrypt~\cite{certiCrypt} and ProVerif~\cite{proVerif}.
+With the author-year citation style, use \verb|\parencite{some-key}| instead.
 To use a citation as the subject, use \verb|\textcite{some-key}|.
 For example, \textcite{certiCrypt} have developed CertiCrypt.
 
